--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Roboto&display=swap" rel="stylesheet">
   </head>
 
-  <body>
+  <body class="bodymain">
     
     <div class="main">
       <div class="team">
