--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <h2>About Us</h2><br>
     <p>
 Assalamualaikum Wr.Wb.
-Kami adalah kelompok 11 dalam Proyek TIM HTML & CSS Kelas-PRO-F DTS Programing 2020. Pembuatan websaite ini dibuat dalam rangka tugas project oleh kominfo DTS. Website kita terdiri dari footer dan header, main 1 sampai 3 dan responsive. sedangkan personil yang terlibat dalam pembuatan web ini antara lain Hidayatullah, M. Naufal Ibrahim Prabowo, lovely Dwiana putri, Muh. Fauzan Bakri dan Shofwan. Di design web kali ini menggunakan HTML dan CSS dengan sedikit animasi CSS. Dengan adanya web ini semoga menjadi referensi untuk satu tim dan tim lain untuk membuat web agar lebih beragam.</p>
+Kami adalah kelompok 11 dalam Proyek TIM HTML & CSS Kelas-PRO-F DTS Programing 2020. Pembuatan website ini dibuat dalam rangka tugas project oleh kominfo DTS. Website kita terdiri dari footer dan header, main 1 sampai 3 dan responsive. sedangkan personil yang terlibat dalam pembuatan web ini antara lain Hidayatullah, M. Naufal Ibrahim Prabowo, lovely Dwiana putri, Muh. Fauzan Bakri dan Shofwan. Di design web kali ini menggunakan HTML dan CSS dengan sedikit animasi CSS. Dengan adanya web ini semoga menjadi referensi untuk satu tim dan tim lain untuk membuat web agar lebih beragam.</p>
   </div>
   <div class="message-wrapper">
     <h2>Contact Us</h2>
