--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
   </head>
 
   <body class="bodymain">
-    
+
+    <div class="header">
+      <div class="container">
+        <div class="header-logo">
+          <img src="F11.png">
+        </div>
+        <div class="header-list">
+          <ul>
+            <li><a href="#" class="btn-a">About</a></li>
+            <li><a href="#" class="btn-a">Profile</a></li>
+            <li><a href="#" class="btn-a">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <div class="main">
       <div class="team">
         <div class="team-box">
@@ -106,6 +121,10 @@ Kami adalah kelompok 11 dalam Proyek TIM HTML & CSS Kelas-PRO-F DTS Programing 2
         </div>
     </div>
   </div>
-
+    <div class="footer">
+      <p>Kami berterima kasih kepada</p>
+      <center><img src="Logo Digitalent.png"></center>
+    </div>
+  </body>
   </body>
 </html>
