--- a/index.html
+++ b/index.html
@@ -100,12 +100,20 @@
         </div>
       </div>
     </div>
-  <div class="about">
-  <center><h2>About Us</h2></center><br>
-    <p>
-Assalamualaikum Wr.Wb.
-Kami adalah kelompok 11 dalam Proyek TIM HTML & CSS Kelas-PRO-F DTS Programing 2020. Pembuatan website ini dibuat dalam rangka tugas project oleh kominfo DTS. Website kita terdiri dari footer dan header, main 1 sampai 3 dan responsive. sedangkan personil yang terlibat dalam pembuatan web ini antara lain Hidayatullah, M. Naufal Ibrahim Prabowo, lovely Dwiana putri, Muh. Fauzan Bakri dan Shofwan. Di design web kali ini menggunakan HTML dan CSS dengan sedikit animasi CSS. Dengan adanya web ini semoga menjadi referensi untuk satu tim dan tim lain untuk membuat web agar lebih beragam.</p>
-  </div>
+        <div class="about-section">
+        <div class="inner-width">
+              <h1>ABOUT US.</h1>
+              <div class="about-section-row">
+                <div class="about-section-co1">
+                    <div class="about">
+              <p> Assalamualaikum wr.wb
+                kami adalah kelompok F11 dalam proyek tim HTML & CSS kelas Pro-F DTS Progaming. Pembuatan website ini dalam rangka tugas project oleh progate. Design website kali ini menggunakan HTML & CSS dengan sedikit animasi CSS. Dengan adanya web ini semoga menjadi referensi untuk satu tim dan tim lainnya dalam membuat web agar menjadi lebih beragam. Website ini dikembangkan oleh Hidayatullah, M.Naufal Ibrahim Prabowo, Lovely Dwina Putri, Muh.Fauzan Bakri, dan Shofwan.</p>
+                <a href="#">Read More</a>
+            </div>
+          </div>
+          </div>
+          </div>
+          </div>
   <div class="message-wrapper">
     <center><h2>Contact Us</h2></center>
     <div class="contact-form">
